fixed a small bug where the comma and ampersand has the wrong font color for the artist names

--- a/src/css_Components/ArtistName.css
+++ b/src/css_Components/ArtistName.css
@@ -8,6 +8,7 @@ Underline when hovering over artist name
   font-size: 14px;
   margin-block: 1em;
   margin-inline: 0;
+  color: #a0a0a0;
 }
 
 
